add ability for editors to view hidden locales

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -8,3 +8,7 @@
 #  summary_fields:
 #  - Sort
 #  - Hidden
+
+#Derralf\FluentTweaks\LocaleExtension:
+#  HiddenTitlePrefix: '* '
+#  HiddenTitleSuffix: ' (!)'
