--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "silverstripe/cms": "^4.2",
     "silverstripe/vendor-plugin": "^1.0",
-    "tractorcow/silverstripe-fluent": "^4||^5"
+    "tractorcow/silverstripe-fluent": "^4||^5||^6"
   },
   "extra": {
     "branch-alias": {
